--- a/src/modules/components/Body/Body.module.css
+++ b/src/modules/components/Body/Body.module.css
@@ -63,7 +63,7 @@
 }
 
 .list {
-  perspective: 1000px;
+  perspective: 800px;
 }
 
 .loading {
