--- a/src/modules/components/Footer/Footer.module.css
+++ b/src/modules/components/Footer/Footer.module.css
@@ -19,10 +19,12 @@
   gap: 1.5rem;
   color: #ffcb05;
   font-family: serif;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 
 .credits {
   color: #f1f2f3;
-  text-shadow: 1px 1px 1px #3c5aa6;
+  text-shadow: 1px 1px 3px #3c5aa6;
+  font-weight: 100;
 }
